# novel_downloader

./: Cargo.toml  LICENSE  README.md
src/: main.rs  mbqg.rs  novel_trait.rs  util.rs  xbqg.rs
