[package]
name = "novel_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
indicatif = "0.17.8"
reqwest = "0.12.1"
scraper = "0.19.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
